1 注释了3条引用了外国网址的语句，这些网址打不开，所以会拖慢页面读取的速度 2 修改了四个首页框框的颜色，改为淡蓝色#1669a6b3，并且修改背景图片 3 修改主标题，由cultivation改为England

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,11 +9,34 @@
 <meta name="keywords" content="Cultivation Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<link href='http://fonts.useso.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-<link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-<link href='http://fonts.useso.com/css?family=Josefin+Sans:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic' rel='stylesheet' type='text/css'>
+<!--<link href='http://fonts.useso.com/css?family=Lobster' rel='stylesheet' type='text/css'>-->
+<!--<link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>-->
+<!--<link href='http://fonts.useso.com/css?family=Josefin+Sans:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic' rel='stylesheet' type='text/css'>-->
 <script src="http://apps.bdimg.com/libs/jquery/1.11.1/jquery.min.js"></script>
-
+<style>
+	.header{
+		background: url("./images/England/Lb_PS.jpg");
+	}
+    /*这是修改的一些样式，大家可以随意更改——2018_01_03WQK*/
+    .header-img1{
+        background:#1669a6b3 ;
+    }
+    .header-img2{
+        background:#1669a6b3 ;
+    }
+    .header-img3{
+        background:#1669a6b3 ;
+    }
+    .header-img4{
+        background:#1669a6b3 ;
+    }
+    .logo{
+        width: 35%;
+    }
+    .logo a {
+        font-family: 'Lucida Calligraphy', cursive;
+    }
+</style>
 <!---- start-smoth-scrolling---->
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
@@ -78,7 +101,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	
 	</div>
 	<div class="logo wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; -webkit-animation-delay: 0.4s;">
-		<a href="index.html">cultivation</a>
+		<a href="index.html">England</a>
 		</div>
 		<div class="header-bottom">
 	<div class="header-grids">
