--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -73,12 +73,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="top-menu">
 		<span class="menu"><img src="images/nav.png" alt=""/> </span>
 		<ul>
-   	<li><a href="index.html" class="active">home</a></li><label>/</label>
-    <li><a href="about.html">About</a></li><label>/</label>
-  	<li><a href="services.html">Services</a></li><label>/</label>
-	<li><a href="products.html">products</a></li><label>/</label>
-   	<li><a href="blog.html">blog</a></li><label>/</label>
-   	<li><a href="contact.html">Contact</a></li>
+   	<li><a href="index.html" class="active">主页</a></li><label>/</label>
+    <li><a href="about.html">大学咨询</a></li><label>/</label>
+  	<li><a href="services.html">出国考试</a></li><label>/</label>
+	<li><a href="products.html">资讯信息</a></li><label>/</label>
+   	<li><a href="blog.html">留学百科</a></li><!--<label>/</label>-->
+   	<!--<li><a href="contact.html">Contact</a></li>-->
     </ul>
      <!-- script for menu -->
 				
