--- a/src/main/webapp/products.html
+++ b/src/main/webapp/products.html
@@ -9,11 +9,21 @@
 <meta name="keywords" content="Cultivation Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<link href='http://fonts.useso.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-<link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-<link href='http://fonts.useso.com/css?family=Josefin+Sans:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic' rel='stylesheet' type='text/css'>
+<!--<link href='http://fonts.useso.com/css?family=Lobster' rel='stylesheet' type='text/css'>-->
+<!--<link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>-->
+<!--<link href='http://fonts.useso.com/css?family=Josefin+Sans:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic' rel='stylesheet' type='text/css'>-->
 <script src="http://apps.bdimg.com/libs/jquery/1.11.1/jquery.min.js"></script>
-
+<style>
+	.header{
+		background: url("./images/England/Lb_PS.jpg");
+	}
+    .logo a {
+        font-family: 'Lucida Calligraphy', cursive;
+    }
+    .logo{
+        width: 35%;
+    }
+</style>
 <!---- start-smoth-scrolling---->
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
@@ -50,12 +60,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="top-menu">
 		<span class="menu"><img src="images/nav.png" alt=""/> </span>
 		<ul>
-   	<li><a href="index.html">home</a></li><label>/</label>
-    <li><a href="about.html">About</a></li><label>/</label>
-  	<li><a href="services.html">Services</a></li><label>/</label>
-	<li><a href="products.html" class="active">products</a></li><label>/</label>
-   	<li><a href="blog.html">blog</a></li><label>/</label>
-   	<li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html" class="active">主页</a></li><label>/</label>
+            <li><a href="about.html">大学咨询</a></li><label>/</label>
+            <li><a href="services.html">出国考试</a></li><label>/</label>
+            <li><a href="products.html">资讯信息</a></li><label>/</label>
+            <li><a href="blog.html">留学百科</a></li><!--<label>/</label>-->
+            <!--<li><a href="contact.html">Contact</a></li>-->s
     </ul>
      <!-- script for menu -->
 				
@@ -78,7 +88,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	
 	</div>
 	<div class="logo logo1">
-		<a href="index.html">cultivation</a>
+		<a href="index.html">England</a>
 		</div>
 		
 </div>
